--- a/files/report.html
+++ b/files/report.html
@@ -6,22 +6,38 @@
 </head>
 <body>
 
-<p align="right">Année universitaire $y1/$y2</p>
-<h1 align="center"><span style="border:2px solid black">&nbspRELEVE DE NOTES&nbsp</span><br><small>$year année</small></br></h1>
+<div class="container"><img src="logo.png" alt="ERiP" style="width:96px; height:96px; position:absolute; left:20px"><p align="right">Année universitaire $y1/$y2</p></div>
+<h1 align="center"><span style="border:2px solid black">&nbspRELEVE DE NOTES&nbsp</span><br><small>$year année</small></h1>
 <table style="width:100%">
   <tr></tr>
 </table> 
-<p><b>&nbsp Nom :</b> $lastname &nbsp &nbsp &nbsp &nbsp<b>Prenom :</b> $firstname &nbsp &nbsp &nbsp &nbsp<b>Filière :</b> $course</p>
+<p><b>&nbsp &nbsp Nom :</b> $lastname &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<b>Prenom :</b> $firstname &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<b>Filière :</b> $course</p>
 <table style="width:100%">
   <tr></tr>
 </table> 
 <p align="center" style="background-color:gainsboro; padding:2px"><b><big>Notes et résultats</big></b></p>
-<style>table, th, td {
+<style>
+      table, th {
       	border-collapse: collapse;
       }
       th {
-		padding: 4px;
+        padding: 4px;
       	border: 2px solid black;
+      }
+      #mod1 {
+        background-color: #f0f0f0;
+        padding: 4px;
+        text-align: center;
+	border: 1px solid black;
+      }
+      #mod2 {
+        padding: 4px;
+        text-align: center;
+	border: 1px solid black;
+      }
+      #blank {
+        padding: 12px;
+	border: 0px;
       }
 </style>
 
