--- a/files/report.html
+++ b/files/report.html
@@ -44,6 +44,7 @@
 <table style="width:100%" border="4">
 $table
 </table> 
+<br><p><b>&nbsp &nbsp Absences injustifiées :</b> $absences</p>
 
 </body>
 </meta>
