--- a/reports/template.html
+++ b/reports/template.html
@@ -15,7 +15,7 @@
 <table style="width:100%">
   <tr></tr>
 </table> 
-<p align="center" style="background-color:gainsboro; padding:2px"><b><big>Notes et résultats</big></b></p>
+<p align="center" style="background-color:gainsboro; padding:2px"><b><big>Résultats</big></b></p>
 <style>
       table, th {
       	border-collapse: collapse;
