--- a/reports/template_detail.html
+++ b/reports/template_detail.html
@@ -11,7 +11,7 @@
 <table style="width:100%">
   <tr></tr>
 </table> 
-<p><b>&nbsp &nbsp Nom :</b> $lastname &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<b>Prenom :</b> $firstname &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<b>Filière :</b> $course</p>
+<p><b>&nbsp &nbsp Nom :</b> $lastname &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<b>Prénom :</b> $firstname &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<b>Filière :</b> $course</p>
 <table style="width:100%">
   <tr></tr>
 </table> 
