modify example report

--- a/reports/example_detail.html
+++ b/reports/example_detail.html
@@ -70,6 +70,7 @@
       <th id="mod0mark"> Note (Coefficient) </th>
       <th id="mod0mark"> Note (Coefficient) </th>
       <th id="mod0mark"> Note (Coefficient) </th>
+      <th id="mod0mark"> Classement </th>
   </tr>
 <tr>
     <th id="mod0name"> Mathématiques </th>
@@ -77,6 +78,7 @@
     <th id="mod0mark"></th>
     <th id="mod0mark"></th>
     <th id="mod0mark"></th>
+    <th id="mod0mark"> 13/42 </th>
 </tr>
 <tr>
     <td id="mod1name"> Probabilités </td>
@@ -84,6 +86,7 @@
     <td id="mod1mark"> 15 (1) </td>
     <td id="mod1mark"> 11 (1) </td>
     <td id="mod1mark"> 10 (4) </td>
+    <td id="mod1mark"> 12/42 </td>
 </tr>
 <tr>
     <td id="mod2name"> Statistiques </td>
@@ -91,8 +94,10 @@
     <td id="mod2mark"> 8 (1) </td>
     <td id="mod2mark"> 6 (1) </td>
     <td id="mod2mark"> 11,5 (4) </td>
+    <td id="mod2mark"> 23/42 </td>
 </tr>
 <tr>
+    <td id="blank"></td>
     <td id="blank"></td>
     <td id="blank"></td>
     <td id="blank"></td>
@@ -105,6 +110,7 @@
     <th id="mod0mark"></th>
     <th id="mod0mark"></th>
     <th id="mod0mark"></th>
+    <th id="mod0mark"> 27/42 </th>
 </tr>
 <tr>
     <td id="mod1name"> Algorithmique répartie </td>
@@ -112,6 +118,7 @@
     <td id="mod1mark"> 11 (1) </td>
     <td id="mod1mark"></td>
     <td id="mod1mark"></td>
+    <td id="mod1mark"> 18/42 </td>
 </tr>
 <tr>
     <td id="mod2name"> Systèmes d'Exploitation </td>
@@ -119,6 +126,7 @@
     <td id="mod2mark"> 18 (1) </td>
     <td id="mod2mark"> 15 (2) </td>
     <td id="mod2mark"></td>
+    <td id="mod2mark"> 2/42 </td>
 </tr>
 <tr>
     <td id="mod1name"> Programmation Unix </td>
@@ -126,6 +134,7 @@
     <td id="mod1mark"> 12 (1) </td>
     <td id="mod1mark"></td>
     <td id="mod1mark"></td>
+    <td id="mod1mark"> 34/42 </td>
 </tr>
 </table> 
 <br><p><b>&nbsp &nbsp Absences injustifiées :</b> 0</p>
