--- a/reports/template.html
+++ b/reports/template.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <body>
 
-<div class="container"><img src="logo.png" alt="ERiP" style="width:96px; height:96px; position:absolute; left:20px"></img><p align="right">Année universitaire $y1/$y2</p></div>
+<div class="container"><img src="logo.png" alt="ERiP" style="width:96px; height:96px; position:absolute; left:20px"><p align="right">Année universitaire $y1/$y2</p></div>
 <h1 align="center"><span style="border:2px solid black">&nbspRELEVE DE NOTES&nbsp</span><br><small>$year année</small></h1>
 <table style="width:100%">
   <tr></tr>
